--- a/main.css
+++ b/main.css
@@ -14,15 +14,17 @@
     display: block;
     background-color: antiquewhite;
 }
-.body{
+
+.body {
     background-color: rgb(175, 13, 13);
     font-size: 1em;
     text-align: center;
     margin: 0;
 }
-footer{
-   background-color: grey;
-   
+
+footer {
+    background-color: grey;
+
 }
 
 #header-row-1 {
@@ -45,8 +47,9 @@ footer{
 
 .botones {
     margin: 10px;
-   
+
 }
+
 #botones {
     text-size-adjust: 500px;
 }
@@ -97,61 +100,63 @@ footer{
     margin: 0;
     vertical-align: bottom;
 }
-#caja-subtitulo{
+
+#caja-subtitulo {
     display: flex;
     align-items: end;
 }
 
-#header-row-producto{
+#header-row-producto {
     display: flex;
     align-items: flex-end;
 }
 
-.prod-contenido{
+.prod-contenido {
     display: grid;
     grid-template-columns: auto;
-    grid-template-rows: auto ;
+    grid-template-rows: auto;
 }
 
-.fila-prod{
+.fila-prod {
     display: flex;
     margin: 20px;
 }
 
-.fila-prod-txt{
+.fila-prod-txt {
     flex-grow: 1;
-    padding: 80px 80 ;
+    padding: 80px 80;
 }
 
-.fila-prod-img{
+.fila-prod-img {
     max-width: 80vw;
     max-height: 80vh;
-   
+
 }
 
-.fila-prod-txt-der{
+.fila-prod-txt-der {
     flex-grow: 1;
     padding: 80px;
     padding-right: 200px;
-    padding-bottom:80px ;
+    padding-bottom: 80px;
     padding-left: 60px;
     text-align: left;
 }
-.fila-prod-txt-izq{
+
+.fila-prod-txt-izq {
     flex-grow: 1;
     padding: 80px;
     padding-right: 60px;
-    padding-bottom:80px ;
+    padding-bottom: 80px;
     padding-left: 200px;
     text-align: right;
-    
+
 }
 
-div label{
-   display: block;
+div label {
+    display: block;
 }
 
-main{
+main {
     background-color: #ffd000;
 }
 
@@ -160,4 +165,116 @@ main{
     margin-top: 0;
     margin-bottom: 0;
 
+}
+
+@media screen and (max-width: 412px) {
+    #header-row-1 {
+        display: flex;
+        height: 20em;
+        align-items: center;
+        background-color: #b14848;
+        margin-top: 0%;
+    }
+
+    .logo {
+        display: flex;
+        align-items: flex-start;
+        height: 5em;
+        width: 5em;
+        transform: translate(0px, -120px);
+    }
+
+    #div-img-home {
+        height: 40em;
+
+    }
+
+    #titulo-pagina {
+        display: flex;
+        padding: 0%;
+       font-size: 6em !important;
+        transform: translate(-100px, 30px);
+    }
+
+    #subtitulo-pagina {
+        transform: translate(-100px, 30px);
+    }
+
+    h1 {
+        color: rgb(0, 0, 0) !important;
+        font-size: 3em !important;
+    }
+
+    .cajatitulo {
+        display: flex;
+        width: 100em;
+        padding: 0%;
+        transform: translate(0px, -10px);
+
+    }
+
+    .nav-botones {
+        background-color: #246ef7;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+    }
+
+    footer {
+        background-color: rgb(61, 61, 61);
+        color: white;
+    }
+
+    .logo-paginas-secundarias {
+        height: 10em;
+        transform: translate(0px , -5px);
+    }
+
+    .prod-contenido {
+        background-color: #ff0000;
+        grid-template-rows: auto;
+
+    }
+
+    div.fila-prod {
+        display: flex;
+        flex-direction: column;
+        margin: 0px;
+    }
+
+    #img2 {
+        transform: translate(1px, -220px);
+        transition-property: all;
+        transition-delay: 0s;
+        transition-timing-function: ease-in-out;
+    }
+    #img2:hover {
+       transform: scale(1.5);
+    }
+    
+    .fila-prod-img {
+        height: 250px;
+        width:auto;
+        transition-property: all;
+        transition-delay: 0s;
+        transition-timing-function: ease-in-out;
+    }
+
+    .fila-prod-txt-izq {
+        transform: translate(-170px, 190px);
+        display: block;
+        text-align: center;
+    }
+
+    .fila-prod-txt-der {
+        transform: translate(-25px, -60px);
+        text-align: center;
+    }
+    .formulario{
+        background-color: #b14848;
+        margin:0%
+    }
+    .fila-prod-img:hover{
+     transform: scale(1.5);
+    }
 }
